# lemonfold.io

./: .gitignore  README.md  pyproject.toml
LaTeX/curriculum/: Readme.md  cv.tex  lemonfold.bib  publications.tex  publications_sorted.tex
internal/: conf.py  deploy.sh  index.md
lemonfold.io/: .gitignore  Readme.md  about.md  bibtex_extensions.py  conf.py  deploy.sh  index.md  projects.md  publications.md  robots.txt
lemonfold.io/_static/: cookieconsent-init.js  custom.css
lemonfold.io/_templates/: cookies.html  layout.html  who.html
